--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,22 @@ img {
   display: block;
   max-width: 100%;
 }
+.btn {
+  width: 200px;
+  height: 60px;
+  font-size: 35px;
+  font-weight: bold;
+  scale: 0;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 5px solid #fafafa;
+  background-color: #fff;
+  border-radius: 20px;
+  transition: transform 0.2s;
+  cursor: pointer;
+}
+.button:hover {
+  transform: scale(0.9);
+}
+.button:not(:last-child) {
+  margin-right: 20px;
+}
